备货单修改

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -54,15 +54,15 @@
 				<input type="text" class="mui-input-clear" id="insupplierNum" disabled>
 			</div>
 			<div class="mui-input-row">
-				<label>供应商收款人：</label>
+				<label>收款人：</label>
 				<input type="text" class="mui-input-clear" id="insupplierMoney" disabled>
 			</div>
 			<div class="mui-input-row">
-				<label>供应商开户行：</label>
+				<label>开户行：</label>
 				<input type="text" class="mui-input-clear" id="insupplierBank" disabled>
 			</div>
 			<div class="mui-input-row">
-				<label>期望收货时间：</label>
+				<label>收货时间：</label>
 				<input type="date" class="" id="inPoLastDa">
 				<font>*</font>
 			</div>
@@ -98,6 +98,7 @@
 					<input class="savedata" type="hidden" value=''>
 					<div style="clear:both"></div>
 				</div>
+				<!--<input type="text" id="inputDivAmend" class="mui-input-clear">-->
 				<font>*</font>
 			</div>
             <div class="mui-input-row">
@@ -121,7 +122,7 @@
 			<button id="saveDetailBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
 		</div>
 		<input id="inStatus" name="inStatus" type="hidden" />
-		<input id="inSta" name="inSta" type="hidden" />
+		<input id="inSta" name="inSta" type="text" />
 		<div class="clear"></div>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
