--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -173,9 +173,9 @@
 				</div>
 			</div>
 		</div>
-		<div id="staOrdCheckBtn" class="app_p20 app_pl25 app_pr25">
-		    <button id="checkBtns" type="submit" class="mui-btn mui-btn-blue">同意发货</button>
-			<button id="rejectBtns" type="submit" class="mui-btn mui-btn-blue app_fr">不同意发货</button>
+		<div id="staOrdCheckBtn" class="app_p20 app_pl25 app_pr25 checkBtn">
+		    <button id="checkBtns" type="submit" class="mui-btn mui-btn-blue passBtn">同意发货</button>
+			<button id="rejectBtns" type="submit" class="mui-btn mui-btn-blue app_fr RejectBtn">不同意发货</button>
 		</div>
 		<div class="clear"></div>
 		
