--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -22,7 +22,7 @@
 				<div id="changeTxt" class="labelri inStock">
 		    		采购中心备货
 			        <input id="fromType1" type="radio" name="fromType" value="1" class="inputRadio" disabled/>
-			                厂商备货
+	                厂商备货
 			        <input id="fromType2" type="radio" name="fromType" value="2" class="inputRadio" disabled/>
 		       </div>
 		    </div>
@@ -100,7 +100,7 @@
 					<label class="app_pr0 app_f13">排产记录：</label>
 					<ul id="schedulingHeader" class="mui-table-view app_fr app_w70p"></ul>											
 				</div>
-				<div class="schedulingHeaderRemark">
+				<div class="schedulingHeaderRemark remark">
 					<label class="app_pr0 app_f13">排产备注：</label>
 				</div>				
 			</div>
@@ -111,7 +111,7 @@
 					<label class="app_pr0 app_f13">排产记录：</label>
 					<ul id="schedulingHeaders" class="mui-table-view app_fr app_w70p"></ul>											
 				</div>
-				<div class="schedulingHeaderRemarks">
+				<div class="schedulingHeaderRemarks remark">
 					<label class="app_pr0 app_f13">排产备注：</label>
 				</div>			
 			</div>
