--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
@@ -12,10 +12,9 @@
 		<title>客户专员管理</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/app.css?time=20180914" rel="stylesheet" />
-    	<style type="text/css">
- 			#refreshContainer{touch-action: none;}  
+    	<!--<style type="text/css">
 			#refreshContainer .hide {visibility: visible!important;} 
-		</style>
+		</style>-->
 	</head>
 	<body>
 		<header class="app_header mui-bar mui-bar-nav">
