备货单审核~审核状态

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -78,7 +78,7 @@
 			</div>
 			<div class="mui-input-row">
 				<label>审核状态：</label>
-				<input type="text" id="" class="mui-input-clear" disabled>
+				<input type="text" id="incheck" class="mui-input-clear" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>排产状态：</label>
