备货单修改

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -62,7 +62,7 @@
 			</div>
 			<div class="mui-input-row">
 				<label>收货时间：</label>
-				<input type="datetime-local" class="mui-input-clear" id="inPoLastDa">
+				<input type="date" class="mui-input-clear" id="inPoLastDa">
 				<font>*</font>
 			</div>
 			<div class="mui-input-row commodityClear" id="inAmendPoLastDaDiv">
