--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -123,7 +123,8 @@
 			<button id="saveDetailBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
 		</div>
 		<input id="inStatus" name="inStatus" type="hidden" />
-		<input id="inSta" name="inSta" type="text" />
+		<input id="inSta" name="inSta" type="hidden" />
+		<input id="bizStatusVal" name="bizStatusVal" type="text" />
 		<div class="clear"></div>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
