备货单修改

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -63,6 +63,14 @@
 				<input type="text" class="mui-input-clear" id="insupplierBank" disabled>
 			</div>
 			<div class="mui-input-row">
+				<label>供应商合同：</label>
+				<div id="insuppliercontract"></div>									
+			</div>
+			<div class="mui-input-row">
+				<label>身份证：</label>
+				<div id="insuppliercardID"></div>	
+			</div>
+			<div class="mui-input-row">
 				<label>收货时间：</label>
 				<input type="date" class="" id="inPoLastDa">
 				<font>*</font>
@@ -124,7 +132,7 @@
 		</div>
 		<input id="inStatus" name="inStatus" type="hidden" />
 		<input id="inSta" name="inSta" type="hidden" />
-		<input id="bizStatusVal" name="bizStatusVal" type="text" />
+		<input id="bizStatusVal" name="bizStatusVal" type="hidden" />
 		<div class="clear"></div>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
