--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -58,6 +58,9 @@
 				<label>收货时间：</label>
 				<input type="date" class="mui-input-clear" id="inPoLastDa" disabled>
 			</div>
+			<div class="mui-input-row" id="inlastDate">
+				
+			</div>
 			<div class="mui-row">
 				<div class="labelLf">备货商品：</div>							
 			</div>
