备货单审核与权限

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -131,6 +131,7 @@
 			<button id="inRejectBtn" type="submit" class="mui-btn mui-btn-blue app_fr RejectBtn">审核驳回</button>
 		</div>
 	<div class="clear"></div>
+	<input type="hidden" id="createPo"/>
 	<input type="hidden" id="supplierId"/>
 	<input type="hidden" name="currentType" id="currentType" value="" />
 	<script src="../../js/component/mui.min.js"></script>
