备货单修改

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -48,11 +48,11 @@
 			</div>
 			<div class="mui-input-row">
 				<label>供应商合同：</label>
-				<input type="text" class="mui-input-clear" id="" disabled>
+				<div id="insuppliercontract"></div>									
 			</div>
 			<div class="mui-input-row">
 				<label>身份证：</label>
-				<input type="text" class="mui-input-clear" id="" disabled>
+				<div id="insuppliercardID"></div>	
 			</div>
 			<div class="mui-input-row">
 				<label>收货时间：</label>
@@ -67,7 +67,7 @@
 			<div class="mui-row app_bline2 inComdty inAddComdty" id="commodityMenu">
 			</div>
 			<div class="mui-row">
-				<div class="labelLf">商品库存：</div>
+				<div class="labelLf" id="labelLf">商品库存：</div>
 			</div>
 			<div class="mui-row app_bline2 inComdty inAddComdty" id="Goodsstock">
 			</div>
