--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
@@ -28,7 +28,7 @@
 					<div class="pre">
 						<input class="newinput" type="text" placeholder="请选择供应商" id="inSupply">
 						<span class="mui-icon mui-icon-closeempty hideSpan" id="hideSpanAdd"></span>
-						<div class="input_div" style="display: none;"></div>						
+						<div class="input_div" style="display: none;"></div>
 						<input class="savedata" type="hidden" value=''>
 					</div>
 					<div style="clear:both"></div>
@@ -99,6 +99,16 @@
 					<label>测试数据：</label>
 					<input type="checkbox" name="" id="" value="" class="testCheckbox"/>
 				</div>
+				<!--<div class="mui-input-row">
+					<label>审核状态：</label>
+					<div class="pre">
+						<select class="secStyle" name="" id="input_checkStatus">
+							<option value=""></option>
+						</select>
+						<input class="savedata" type="hidden" value=''>
+						<div style="clear:both"></div>
+					</div>
+				</div>-->
 			</form>
 		</div>
 		<div class="SearchBtnClass">
