备货单修改

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -84,6 +84,10 @@
 				<input type="text" id="incheck" class="mui-input-clear" disabled>
 			</div>
 			<div class="mui-input-row">
+				<label>业务状态：</label>
+				<input type="text" id="inPoDizstatus" class="mui-input-clear" disabled>
+			</div>
+			<div class="mui-input-row">
 				<label>排产状态：</label>
 				<input type="text" id="inSchedulstatus" class="mui-input-clear" disabled>
 			</div>
