--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orScheduling.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orScheduling.html
@@ -51,6 +51,10 @@
 						<label>已排产数量：</label>
 						<input type="text" id="toalSchedulingNum" disabled>
 					</div>
+					<div class="mui-input-row">
+						<label>当前状态：</label>
+						<input type="text" id="chedulingStatus" disabled class="app_cred3">
+					</div>
 					<div class="inAddBtnParent">
 						<button id="purchAddBtn" type="submit" class="inAddBtn app_btn_search  mui-btn-blue mui-btn-block">添加排产计划</button>
 					</div> 
