--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orScheduling.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orScheduling.html
@@ -24,9 +24,9 @@
 				<label>排产类型：</label>
 				<div id="changeTxt" class="labelri inStock">
 		    		按订单排产
-			        <input id="fromType1" type="radio" name="fromType" value="0" class="inputRadio" checked/>
+			        <input id="schedPlan1" type="radio" name="fromType" value="0" class="inputRadio" checked/>
             		按商品排产
-			        <input id="fromType2" type="radio" name="fromType" value="1" class="inputRadio"/>
+			        <input id="schedPlan2" type="radio" name="fromType" value="1" class="inputRadio"/>
 		       </div>
 		    </div>
 	<!--按订单排产-->	    
