备货单修改

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -95,11 +95,11 @@
 				<label>排产类型：</label>
 				<input type="text" id="inSchedultype" class="mui-input-clear" disabled>
 			</div>
-			<div class="mui-input-row inComdty inDetailComdty" id="stockGoods">
+			<!--<div class="mui-input-row inComdty inDetailComdty" id="stockGoods">
 				<div class="labelLf">采购商品：</div>
 				<ul id="purchaseMenu" class="mui-table-view"></ul>									
-			</div>
-			<div class="mui-input-row inComdty inProduction" id="schedulingPlan_forHeader">
+			</div>-->
+			<!--<div class="mui-input-row inComdty inProduction" id="schedulingPlan_forHeader">
 				<div class="labelLf">按订单排产：</div>
 				<div class="mui-row app_bline3">
 					<label class="app_pr0 app_f13">排产记录：</label>
@@ -119,7 +119,7 @@
 				<div class="schedulingHeaderRemarks remark">
 					<label class="app_pr0 app_f13">排产备注：</label>
 				</div>			
-			</div>
+			</div>-->
 			<!--审批流程块 有的话显示-->
 			<div class="mui-input-row">
 				<div class="labelLf">状态流程：</div>
