备货单修改

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
@@ -54,7 +54,7 @@
 					</div>
 				</div>
 				<div class="mui-input-row">
-					<label>订单来源：</label>
+					<label>审核状态：</label>
 					<div class="pre">
 						<select class="secStyle" name="" id="input_div_orderStatus">
 							<option value=""></option>
@@ -64,19 +64,9 @@
 					</div>
 				</div>
 				<div class="mui-input-row">
-					<label>审核状态：</label>
-					<div class="pre">
-						<select class="secStyle" name="" id="input_div_cheStatus">
-							<option value=""></option>
-						</select>
-						<input class="savedata" type="hidden" value=''>
-						<div style="clear:both"></div>
-					</div>
-				</div>
-				<div class="mui-input-row">
 					<label>排产状态：</label>
 					<div class="pre">
-						<select class="secStyle" name="" id="">
+						<select class="secStyle" name="" id="input_div_poSchType">
 							<option value="">请选择</option>
 							<option value="0">未排产</option>
 							<option value="1">排产中</option>
@@ -88,7 +78,7 @@
 				<div class="mui-input-row">
 					<label>待支付：</label>
 					<div class="pre">
-						<select class="secStyle" name="" id="">
+						<select class="secStyle" name="" id="wait_pay">
 							<option value="">请选择</option>
 							<option value="1">是</option>
 						</select>
@@ -97,18 +87,8 @@
 				</div>
 				<div class="mui-input-row">
 					<label>测试数据：</label>
-					<input type="checkbox" name="" id="" value="" class="testCheckbox"/>
+					<input type="checkbox" name="" id="testCheckbox" value="" class="testCheckbox"/>
 				</div>
-				<!--<div class="mui-input-row">
-					<label>审核状态：</label>
-					<div class="pre">
-						<select class="secStyle" name="" id="input_checkStatus">
-							<option value=""></option>
-						</select>
-						<input class="savedata" type="hidden" value=''>
-						<div style="clear:both"></div>
-					</div>
-				</div>-->
 			</form>
 		</div>
 		<div class="SearchBtnClass">
