--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/payApplyList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/payApplyList.html
@@ -69,12 +69,11 @@
 			<div class="paybox">
 				<label>备注:</label>
 			    <textarea id="textxt"></textarea>
-			</div>
-			
+			</div>			
 			<div class="btnbox">
 				<button id="payBtnsave" style="background: #40ABE9;color:#fff;width:100px">保存</button>
-			</div>
-			
+				<button id="payBtnremove" style="background: #40ABE9;color:#fff;width:100px">取消</button>
+			</div>			
 		</div>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
