--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -14,7 +14,7 @@
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
 			<p class="app_cf app_nav_text_center">备货单修改</p>
 		</header>
-		<div class="mui-content mui-input-group">
+		<div class="mui-content mui-input-group" id="payMents">
 			<div class="mui-input-row">
 				<label>备货单编号：</label>
 				<input type="text" class="mui-input-clear" id="inPoordNum" disabled>
@@ -128,7 +128,7 @@
 			</div>
 		</div>
 		<div class="inSaveBtn">
-			<button id="saveDetailBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
+			
 		</div>
 		<input id="inStatus" name="inStatus" type="hidden" />
 		<input id="inSta" name="inSta" type="hidden" />
