--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -155,14 +155,14 @@
 							<label>总申报数量：</label>
 							<input type="text" id="purchOrdQty" disabled>
 						</div>
-						<div class="mui-input-row">
+						<!--<div class="mui-input-row">
 							<label>总待排产量：</label>
 							<input type="text" id="purchWaiteNum" disabled>
 						</div>	
 						<div class="mui-input-row">
 							<label>已排产数量：</label>
 							<input type="text" id="toalSchedulingNum" disabled>
-						</div>
+						</div>-->
 						<div class="inAddBtnParent">
 							<button id="purchAddBtn" type="submit" class="inAddBtn app_btn_search  mui-btn-blue mui-btn-block">添加排产计划</button>
 						</div> 
