--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -105,7 +105,7 @@
 			<div class="mui-input-row inComdty inProduction" id="schedulingPlan_forHeader">
 				<div class="labelLf">按订单排产：</div>
 				<div class="mui-row app_bline3">
-					<label class="app_pr0 app_f13">排产记录：</label>
+					<label class="app_pr0 app_f13">排产记录</label>
 					<ul id="schedulingHeader" class="mui-table-view app_fr app_w70p"></ul>											
 				</div>
 				<div class="schedulingHeaderRemark remark">
@@ -116,7 +116,7 @@
 				<div class="labelLf">按商品排产：</div>
 				<ul id="purchaseMenus" class="mui-table-view app_bline3"></ul>
 				<div class="mui-row app_bline3">
-					<label class="app_pr0 app_f13">排产记录：</label>
+					<label class="app_pr0 app_f13">排产记录</label>
 					<ul id="schedulingHeaders" class="mui-table-view app_fr app_w70p"></ul>											
 				</div>
 				<div class="schedulingHeaderRemarks remark">
