--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orScheduling.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orScheduling.html
@@ -60,13 +60,13 @@
 					</div> 
 				</div>
 				<div class="mui-row">
-					<div class="labelLf">排产记录：</div>
+					<div class="labelLf">排产记录</div>
 					<div class="mui-row app_f13" id="purchSchedRecord">
 						
 					</div>
 				</div>
 				<div class="mui-row">
-					<div class="labelLf">排产计划：</div>
+					<div class="labelLf">排产计划</div>
 					<div class="mui-row app_f13" id="purchAddCont">
 						<div class="mui-row app_bline" id="purchPlan">
 							<div class="mui-input-row">
