--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -168,7 +168,7 @@
 						</div> 
 					</div>
 					<div class="mui-row">
-						<div class="labelLf">排产计划：</div>
+						<div class="labelLf">排产计划</div>
 						<div class="mui-row app_f13" id="purchAddCont">
 							<div class="mui-row app_bline" id="purchPlan">
 								<div class="mui-input-row">
