--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -136,9 +136,9 @@
 					<label>排产类型：</label>
 					<div id="changeTxt" class="labelri inStock">
 			    		按订单排产
-				        <input id="fromType1" type="radio" name="schedulType" value="0" class="inputRadio" checked disabled/>
+				        <input id="fromType1" type="radio" name="schedulType" value="0" class="inputRadio" checked/>
 	            		按商品排产
-				        <input id="fromType2" type="radio" name="schedulType" value="1" class="inputRadio" disabled/>
+				        <input id="fromType2" type="radio" name="schedulType" value="1" class="inputRadio"/>
 			       </div>
 			    </div>
 		<!--按订单排产-->	    
