--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orScheduling.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orScheduling.html
@@ -8,7 +8,7 @@
 		<meta name="x5-fullscreen" content="true">
 		<title>排产</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css" rel="stylesheet" />
+		<link href="../../css/app.css?time=20181008" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="header mui-bar mui-bar-nav">
