--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
@@ -9,7 +9,7 @@
 		<meta name="x5-fullscreen" content="true">
 		<title>订单查询</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css" rel="stylesheet" />
+		<link href="../../css/app.css?time=20181008" rel="stylesheet" />
 	</head>
 
 	<body>
