--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>审核</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css?time=20180930" rel="stylesheet" />
+		<link href="../../css/app.css?time=20181008" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
@@ -136,9 +136,9 @@
 					<label>排产类型：</label>
 					<div id="changeTxt" class="labelri inStock">
 			    		按订单排产
-				        <input id="fromType1" type="radio" name="schedulType" value="0" class="inputRadio" checked disabled/>
+				        <input id="fromType1" type="radio" name="schedulType" value="0" class="inputRadio" checked/>
 	            		按商品排产
-				        <input id="fromType2" type="radio" name="schedulType" value="1" class="inputRadio" disabled/>
+				        <input id="fromType2" type="radio" name="schedulType" value="1" class="inputRadio"/>
 			       </div>
 			    </div>
 		<!--按订单排产-->	    
@@ -210,8 +210,6 @@
 	<script src="../../js/component/mui.min.js"></script>
 	<script src="../../js/component/zepto.min.js"></script>
 	<script src="../../js/component/GHutils.js"></script>
-	<script src="../../js/inventoryMagmetJs/inCheck.js?time=20180930"></script>
+	<script src="../../js/inventoryMagmetJs/inCheck.js?time=20181008"></script>
     </body>
 </html>
-
-
